# quorum

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INIT.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  fly.toml  llms.txt  pyproject.toml  resources.md
.claude/: settings.json
.claude/agents/: backend-engineer.md  console-engineer.md  devops-engineer.md  docs-writer.md  security-auditor.md
.claude/commands/: demo.md  new-worktree.md  run-dev.md  validate.md
.claude/skills/add-actuator/: SKILL.md
.claude/skills/create-event-type/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  image-push.yml  live-release-monitor.yml  release.yml  security.yml
alembic/: env.py
alembic/versions/: 0001_initial_intents_and_events_projected.py  0002_remaining_entity_tables.py  0003_health_check_results.py  0004_human_approvals.py  0005_vote_llm_metadata.py
apps/api/: AGENTS.md
apps/api/app/: demo_seed.py  logging_config.py  main.py  middleware.py  request_context.py  tracing.py  version.py
apps/api/app/api/: history.py  routes.py
apps/api/app/db/: __init__.py  engine.py  models.py
apps/api/app/domain/: models.py
apps/api/app/services/: auth.py  event_log.py  executor.py  health_checks.py  policy_engine.py  postgres_projector.py  projector.py  quorum_engine.py  reconcile.py  state_store.py
apps/api/app/services/actuators/: __init__.py
apps/api/app/services/actuators/fly/: __init__.py  actions.py  client.py  specs.py
apps/api/app/services/actuators/github/: __init__.py  actions.py  auth.py  client.py  specs.py
apps/api/app/tools/: __init__.py  bootstrap_github_app.py  bootstrap_keys.py  reconcile.py
apps/console/: AGENTS.md  app.js  index.html  styles.css
apps/llm_agent/: AGENTS.md  __init__.py  budget.py  claude_client.py  config.py  loop.py  metrics.py  quorum_api.py  run.py  tools.py
apps/llm_agent/prompts/: deploy-agent.md  review-agent.md  telemetry-agent.md
config/: agents.yaml  github.yaml  policies.yaml  system.yaml
docs/: ARCHITECTURE.md  CURRENT_MODE.md  DEMO_VIDEO.md  GITHUB_APP_ACTUATOR_FLY.md  GITHUB_AUTOMATION.md  PARALLEL_DEVELOPMENT.md  PRODUCT.md  REPO_MAP.md  ROADMAP.md  SESSION_HANDOFF.md
docs/design/: fly-deployment.md  llm-adapter.md  llm-voter-role.md  phase-4-github-actuator.md  phase-6-entry-plan.md  phase-6-gate-checklist.md  phase-6-readiness-checkpoint.md  postgres-projection.md
docs/releases/: v0.6.1-proof.md  v0.6.2-proof.md  v0.6.3-proof.md  v0.6.4-proof.md  v0.6.5-proof.md  v0.6.6-proof.md  v0.6.7-proof.md  v0.6.8-proof.md
examples/: demo_incident.json  image_push_completed.json  rollback_impossible_event.json  sample_proposal.json
scripts/: bootstrap_local_repo.sh  capture_operator_proof.sh  check_console_proof.sh  check_event_schema_stability.sh  check_live_release.sh  check_phase6_gate.sh  check_python_runtime.py  check_release_proof_archive.sh  create_public_github_repo.sh  demo_github_fixture_flow.sh  demo_run.sh  new_worktree.sh  prove_llm_prod_deploy.sh  prove_review_llm_vote.sh  validate_merge.sh
tests/: _helpers.py  conftest.py  test_agent_capability_gates.py  test_allowed_action_types.py  test_auth.py  test_auth_argon2.py  test_bootstrap_contract.py  test_console.py  test_console_proof_smoke.py  test_demo_recording_assets.py  test_deploy_llm_agent.py  test_dockerfile_runtime.py  test_event_log_chain.py  test_event_log_subscribe.py  test_event_schema_stability_preflight.py  test_executor_fly_dispatch.py  test_executor_github_dispatch.py  test_fly_actuator.py  test_fly_deploy_proposal_gate.py  test_fly_live_integration.py  test_github_actuator_auth.py  test_github_add_labels.py  test_github_app_manifest_tool.py  test_github_check_run.py  test_github_close_pr.py  test_github_comment_issue.py  test_github_live_integration.py  test_github_open_pr.py  test_github_rollback.py  test_github_specs.py  test_hardening.py  test_health_check_events.py  test_health_checks.py  test_history_endpoints.py  test_human_approval.py  test_image_push_evidence.py  test_image_push_workflow.py  test_live_release_monitor.py  test_llm_adapter_budget.py  test_llm_adapter_claude_client.py  (+29 more)
