[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quorum"
version = "0.1.0"
description = "Control plane for safe, auditable, policy-gated, quorum-based execution by AI agents operating on code and infrastructure."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Jayden Piao", email = "jaydenpiao87@gmail.com" },
]
keywords = ["ai-agents", "control-plane", "event-sourcing", "policy", "quorum", "safety"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "fastapi>=0.136.0",
  "uvicorn>=0.45.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "httpx>=0.27.0",
  "slowapi>=0.1.9",
  "argon2-cffi>=23.1.0",
  "structlog>=24.1.0",
]

[project.urls]
Homepage = "https://github.com/jaydenpiao/quorum"
Repository = "https://github.com/jaydenpiao/quorum"
Issues = "https://github.com/jaydenpiao/quorum/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.15.11",
  "pip-audit>=2.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
