[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quorum"
version = "0.1.0"
description = "Control plane for safe, auditable, policy-gated, quorum-based execution by AI agents operating on code and infrastructure."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Jayden Piao", email = "jaydenpiao87@gmail.com" },
]
keywords = ["ai-agents", "control-plane", "event-sourcing", "policy", "quorum", "safety"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "fastapi>=0.136.0",
  "uvicorn>=0.45.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "httpx>=0.27.0",
  "slowapi>=0.1.9",
  "argon2-cffi>=23.1.0",
  "structlog>=24.1.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "prometheus-client>=0.21.0",
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
  "opentelemetry-exporter-otlp-proto-http>=1.29.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "alembic>=1.14.0",
  "pyjwt>=2.8.0",
  "cryptography>=42.0.0",
  "anthropic>=0.45.0",
]

[project.urls]
Homepage = "https://github.com/jaydenpiao/quorum"
Repository = "https://github.com/jaydenpiao/quorum"
Issues = "https://github.com/jaydenpiao/quorum/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.15.11",
  "pip-audit>=2.10.0",
  "mypy>=1.11.0",
  "types-PyYAML>=6.0.12",
  "respx>=0.22.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=apps --cov-report=term-missing --cov-report=xml -m 'not integration'"
markers = [
  "integration: tests that require live external services such as Postgres, Fly.io, or GitHub",
]

[tool.coverage.run]
source = ["apps"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
files = ["apps"]

[[tool.mypy.overrides]]
module = "slowapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_fastapi_instrumentator.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true
